--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -11,3 +11,20 @@
 @import "_shop.scss";
 @import "_responsive.scss";
 @import "_spacings.scss";
+
+.work-img{
+  margin: 0 20px;
+  -webkit-box-shadow: -2px 3px 19px -4px rgba(20,20,20,1);
+  -moz-box-shadow: -2px 3px 19px -4px rgba(20,20,20,1);
+  box-shadow: -2px 3px 19px -4px rgba(20,20,20,1);
+}
+
+.owl-theme .owl-nav.disabled+.owl-dots  {
+  margin-top: 50px;
+
+  > .owl-dot span {
+    height: 12px;
+    width: 12px;
+    border: 2px solid #839891
+  }
+}
